--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 install: pip install numpy==$NUMPY_VERSION 
   
 script: 
-    - python -c 'import numpy as np; print("numpy"n np.__version__)'
+    - python -c 'import numpy as np; print("numpy", np.__version__)'
     - py.test 
 
   
