--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,19 @@ language: python
 
 dist: trusty
 
-python:
-  - 2.7
-  - 3.6
-  
-env:
-  - NUMPY_VERSION=1.7.1
-  - NUMPY_VERSION=1.12.1
+cache: pip
 
-install: pip install numpy==$NUMPY_VERSION 
-  
-script: 
-    - python -c 'import numpy as np; print("numpy", np.__version__)'
-    - py.test 
+matrix:
+  include:
+  - python: "2.7"
+    env: NUMPY_VERSION=1.7.1
+  - python: "3.6"
+    env: NUMPY_VERSION=1.7.1
+  - python: "3.6"
+    env: NUMPY_VERSION=1.12.1
 
-  
+install: pip install numpy==$NUMPY_VERSION
+
+script:
+  - python -c 'import numpy as np; print("numpy:", np.__version__)'
+  - py.test
